# brief-manager

./: .pylintrc  Makefile  README.rst  setup.cfg  setup.py
brief/: __init__.py  __main__.py
brief/core/layouts/: base.py
brief/core/layouts/sections/: __init__.py  body.py  footer.py  header.py  sidebar.py
brief/core/utils/: navigator.py
requirements/: base.txt  dev.txt
