[metadata]
name = Brief Manager
version = attr: brief.__version__
url = https://github.com/Rom1-J/brief-manager/
author = Romain J.
author_email = romain@gnous.eu
maintainer = Romain J.
maintainer_email = romain@gnous.eu
long_description = file: README.rst
license = agplv3
platforms = linux
[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    rich>=9.10.0
[options.entry_points]
console_scripts =
    brief=brief.__main__:main
[options.packages.find]
include =
    brief
    brief.*